<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/kinBackgroundColor"
    >

    <ImageView
        android:id="@+id/safe_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/kinrecovery_margin_xlarge"
        android:src="@drawable/kinrecovery_safe_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.kin.ecosystem.base.widget.KinEcosystemTextView
        android:id="@+id/keep_safe_title"
        style="@style/KinecosysTitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/kinrecovery_margin_xlarge"
        android:text="@string/kinrecovery_keep_your_kin_safe"
        app:fontExtra="medium"
        app:layout_constraintEnd_toEndOf="@+id/safe_icon"
        app:layout_constraintStart_toStartOf="@+id/safe_icon"
        app:layout_constraintTop_toBottomOf="@+id/safe_icon"/>

    <com.kin.ecosystem.base.widget.KinEcosystemTextView
        android:id="@+id/description"
        style="@style/KinecosysTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        app:fontExtra="regular"
        android:textSize="@dimen/kinecosystem_sub_title_size"
        android:letterSpacing="-0.02"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/kinrecovery_backup_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keep_safe_title"/>

    <Button
        android:id="@+id/lets_go_button"
        android:layout_width="@dimen/kinrecovery_btn_width"
        android:layout_height="@dimen/kinrecovery_btn_frame_height"
        android:layout_marginBottom="@dimen/kinrecovery_margin_xlarge"
        android:text="@string/kinrecovery_let_s_go"
        style="@style/KinecosysButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>