<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/kinBackgroundColor">

    <TextView
        android:id="@+id/save_qr_description"
        style="@style/KinecosysTitleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/kinecosystem_main_medium_margin"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/kinrecovery_line_spacing"
        android:text="@string/kinrecovery_you_will_need_it_to_restore_your_kin_send_it_to_yourself_by_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
        android:id="@+id/qr_image"
        android:layout_width="@dimen/kinrecovery_qr_code_image_size"
        android:layout_height="@dimen/kinrecovery_qr_code_image_size"
        android:layout_marginTop="@dimen/kinecosystem_margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_qr_description"/>


    <com.kin.ecosystem.base.widget.KinEcosystemTextView
        android:id="@+id/remember_description"
        style="@style/KinecosysTitleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/kinrecovery_line_spacing"
        android:letterSpacing="-0.03"
        android:layout_marginTop="@dimen/kinecosystem_main_margin"
        android:text="@string/kinrecovery_keep_your_password_in_a_safe_place_and_the_qr_handy"
        android:textColor="@color/kinecosystem_failed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_image"/>

    <CheckBox
        android:id="@+id/i_saved_my_qr_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHighlight="@color/kinecosystem_purple"
        android:theme="@style/KinrecoveryCheckBox"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/send_email_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remember_description"/>

    <TextView
        android:id="@+id/i_saved_my_qr_text"
        style="@style/KinecosysTitleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kinrecovery_i_ve_saved_my_qr"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/i_saved_my_qr_checkbox"
        app:layout_constraintStart_toEndOf="@id/i_saved_my_qr_checkbox"
        app:layout_constraintTop_toTopOf="@id/i_saved_my_qr_checkbox"/>

    <Button
        android:id="@+id/send_email_button"
        style="@style/KinecosysButton"
        android:layout_width="@dimen/kinrecovery_btn_width"
        android:layout_height="@dimen/kinrecovery_btn_frame_height"
        android:layout_marginBottom="@dimen/kinrecovery_margin_xlarge"
        android:text="@string/kinrecovery_send_qr_code_via_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</android.support.constraint.ConstraintLayout>